--- a/convert.ipynb
+++ b/convert.ipynb
@@ -7,6 +7,8 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "from numpy.ctypeslib import ndpointer \n",
+    "\n",
     "import matplotlib.pyplot as plt\n",
     "import numba as nb\n",
     "\n",
@@ -14,7 +16,11 @@
     "from imageio import imread, imsave\n",
     "from skimage.measure import label, regionprops\n",
     "from skimage.color import rgb2hsv, hsv2rgb\n",
-    "from skimage.filters import threshold_otsu"
+    "from skimage.filters import threshold_otsu\n",
+    "\n",
+    "import ctypes \n",
+    "import os\n",
+    "from time import sleep"
    ]
   },
   {
@@ -348,6 +354,34 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path = 'D:\\\\Python_progs\\\\AI\\\\Artist\\\\tests\\\\test_cython\\\\'\n",
+    "\n",
+    "os.system(f'gcc -Wall -pedantic -shared -fPIC -o {path}lib.dll {path}test.c')\n",
+    "\n",
+    "doublepp = ndpointer(dtype=np.uintp, ndim=1, flags='C') \n",
+    "\n",
+    "dll = ctypes.CDLL(path + 'lib.dll', winmode=0) \n",
+    "\n",
+    "foobar = dll.foobar \n",
+    "foobar.argtypes = [ctypes.c_int, ctypes.c_int, doublepp] \n",
+    "foobar.restype = None \n",
+    "\n",
+    "def get_args(x: np.ndarray): \n",
+    "    xpp = (x.__array_interface__['data'][0] + np.arange(x.shape[0]) * x.strides[0]).astype(np.uintp) \n",
+    "    m = ctypes.c_int(x.shape[0]) \n",
+    "    n = ctypes.c_int(x.shape[1]) \n",
+    "    return m, n, xpp\n",
+    "\n",
+    "x = np.zeros([2, 2], dtype=np.double)\n",
+    "foobar(*get_args(x))"
+   ]
   }
  ],
  "metadata": {
