Более-менее разобрался с cython и написал дозаполнение картинки

--- a/convert.ipynb
+++ b/convert.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,24 +24,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\user\\AppData\\Local\\Temp\\ipykernel_2708\\553579033.py:1: DeprecationWarning: Starting with ImageIO v3 the behavior of this function will switch to that of iio.v3.imread. To keep the current behavior (and make this warning disappear) use `import imageio.v2 as imageio` or call `imageio.v2.imread` directly.\n",
+      "C:\\Users\\user\\AppData\\Local\\Temp\\ipykernel_20164\\553579033.py:1: DeprecationWarning: Starting with ImageIO v3 the behavior of this function will switch to that of iio.v3.imread. To keep the current behavior (and make this warning disappear) use `import imageio.v2 as imageio` or call `imageio.v2.imread` directly.\n",
       "  img = imread('gen.png')\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x1e7f55722e0>"
+       "<matplotlib.image.AxesImage at 0x28ed3489fd0>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,16 +135,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x1e783a35e50>"
+       "<matplotlib.image.AxesImage at 0x28ed5c16700>"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,23 +174,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 52/52 [00:01<00:00, 42.29it/s]\n"
+      "100%|██████████| 52/52 [00:01<00:00, 42.72it/s]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x1e78a792fa0>"
+       "<matplotlib.image.AxesImage at 0x28ed61ebb50>"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -207,7 +207,6 @@
    ],
    "source": [
     "nnimg = nimg.copy()\n",
-    "cnt, a = 0, 0\n",
     "for color in tqdm(clrs):\n",
     "    if (color != [0, 0, 0]).any():\n",
     "        f = (nnimg == color).sum(axis=2) == 3\n",
@@ -226,29 +225,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = 'D:\\\\Python_progs\\\\AI\\\\Artist\\\\tests\\\\test_cython\\\\'\n",
-    "\n",
-    "os.system(f'gcc -Wall -pedantic -shared -fPIC -o {path}lib.dll {path}test.c')\n",
-    "\n",
-    "doublepp = ndpointer(dtype=np.uintp, ndim=1, flags='C') \n",
-    "\n",
-    "dll = ctypes.CDLL(path + 'lib.dll', winmode=0) \n",
-    "\n",
-    "foobar = dll.foobar \n",
-    "foobar.argtypes = [ctypes.c_int, ctypes.c_int, doublepp] \n",
-    "foobar.restype = None \n",
-    "\n",
-    "def get_args(x: np.ndarray): \n",
-    "    xpp = (x.__array_interface__['data'][0] + np.arange(x.shape[0]) * x.strides[0]).astype(np.uintp) \n",
-    "    m = ctypes.c_int(x.shape[0]) \n",
-    "    n = ctypes.c_int(x.shape[1]) \n",
-    "    return m, n, xpp\n",
-    "\n"
+    "import accelerated_trajectory as at"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "var = [[i, j] for i in range(-1, 2) for j in range(-1, 2) if not (i == 0 and j == 0)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import os\n",
+    "os.system('python compile_cython.py build_ext --inplace')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "Argument 'var' has incorrect type (expected numpy.ndarray, got list)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[22], line 6\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m rg \u001b[38;5;129;01min\u001b[39;00m rgs:\n\u001b[0;32m      5\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m rg\u001b[38;5;241m.\u001b[39marea \u001b[38;5;241m<\u001b[39m \u001b[38;5;241m30\u001b[39m:\n\u001b[1;32m----> 6\u001b[0m         \u001b[43mat\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mbfs\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mrg\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcoords\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m~\u001b[39;49m\u001b[43mf\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnnimg\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mvar\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      7\u001b[0m plt\u001b[38;5;241m.\u001b[39mimshow(f, cmap\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mgray\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[1;31mTypeError\u001b[0m: Argument 'var' has incorrect type (expected numpy.ndarray, got list)"
+     ]
+    }
+   ],
+   "source": [
+    "f = (nnimg == 0).sum(axis=2) == 3\n",
+    "lb = label(f)\n",
+    "rgs = regionprops(lb)\n",
+    "for rg in rgs:\n",
+    "    if rg.area < 30:\n",
+    "        at.bfs(*rg.coords[0], ~f, nnimg, var)\n",
+    "plt.imshow(f, cmap='gray')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
