--- a/convert.ipynb
+++ b/convert.ipynb
@@ -13,7 +13,7 @@
     "import numba as nb\n",
     "\n",
     "from tqdm import trange, tqdm\n",
-    "from imageio import imread, imsave\n",
+    "from imageio.v2 import imread, imwrite\n",
     "from skimage.measure import label, regionprops\n",
     "from skimage.color import rgb2hsv, hsv2rgb\n",
     "from skimage.filters import threshold_otsu\n",
@@ -32,7 +32,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Temp\\ipykernel_13144\\4078992883.py:1: DeprecationWarning: Starting with ImageIO v3 the behavior of this function will switch to that of iio.v3.imread. To keep the current behavior (and make this warning disappear) use `import imageio.v2 as imageio` or call `imageio.v2.imread` directly.\n",
+      "C:\\Temp\\ipykernel_13144\\4078992883.py:1: DeprecationWarning: Starting with imageio.v2 v3 the behavior of this function will switch to that of iio.v3.imread. To keep the current behavior (and make this warning disappear) use `import imageio.v2.v2 as imageio.v2` or call `imageio.v2.v2.imread` directly.\n",
       "  img = imread('circle.png')\n"
      ]
     },
@@ -265,7 +265,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "imsave('colors_circle.png', (hsv2rgb(nnimg) * 255).astype('uint8'))"
+    "imwrite('colors_circle.png', (hsv2rgb(nnimg) * 255).astype('uint8'))"
    ]
   },
   {
